--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -41,9 +41,9 @@ library(pheatmap)
 library(enrichR)
 library(annotables) # Annotations of Ensembl IDs
 # Remove non-canonical chromosome names, Mus Musculus
-grcm38 <- grcm38[ !(grepl("_", grcm38$chr) | grepl("GL", grcm38$chr)), c("ensgene", "symbol", "description")]
-grcm38 <- grcm38[ !duplicated(grcm38) & !is.na(grcm38$symbol) & grcm38$description != "", ]
-all.symbol <- unique(grcm38$symbol) # All genes for background
+gene_annotations <- grcm38[ !(grepl("_", grcm38$chr) | grepl("GL", grcm38$chr)), c("ensgene", "symbol", "description")]
+gene_annotations <- grcm38[ !duplicated(grcm38) & !is.na(grcm38$symbol) & grcm38$description != "", ]
+all.symbol <- unique(gene_annotations$symbol) # All genes for background
 ```
 
 # Helper functions
@@ -59,7 +59,7 @@ p.vals <- function(object, p.adj = 0.1, subset_by = subset_by, comparison = "DEG
   genes.ABC <- topTags(object, n = Inf, p.value = p.adj) %>% as.data.frame # Get all significant genes
   
   # genes.ABC$ensgene <- sapply(genes.ABC$genes, function(x) strsplit(x, ".", fixed = TRUE)[[1]][1])
-  genes.ABC <- left_join(data.frame(genes.ABC, stringsAsFactors = FALSE), grcm38, by = c("genes" = "ensgene")) # Attach annotations
+  genes.ABC <- left_join(data.frame(genes.ABC, stringsAsFactors = FALSE), gene_annotations, by = c("genes" = "ensgene")) # Attach annotations
   
   if (print_to_file) {
     # Save most significant genes
@@ -226,7 +226,7 @@ all.equal(sample_annotation$Sample, colnames(counts)[7:ncol(counts)])
 source("calcTPM.R")
 TPM <- calcTPM(data = counts[, 7:ncol(counts)], feature_length = counts[, c("Geneid", "Length")])
 TPM <- data.frame(ensgene = counts[, "Geneid"], TPM)
-TPM <- inner_join(TPM, grcm38, by = "ensgene")
+TPM <- inner_join(TPM, gene_annotations, by = "ensgene")
 fileName <- paste0(data_dir, "results/TPM.xlsx")
 unlink(fileName) # Delete previous file
 wb <- openxlsx::createWorkbook(fileName) # openxlsx::loadWorkbook(fileName) # Or, load existing
