--- a/Figure_clusterProfiler.Rmd
+++ b/Figure_clusterProfiler.Rmd
@@ -88,11 +88,11 @@ if (logFC) { # Select genes by maximum logFC
   degs.all <- degs.all[ complete.cases(degs.all), ] # Keep only successfully converted entries
   # Prepare full gene list
   geneList.all <- -log10(degs.all$PValue)  # Use -log10-transformed 
+  geneList.all[is.infinite(geneList.all)] <- .Machine$double.xmax # Avoid infinite -log10 p-values
   names(geneList.all) <- degs.all$ENTREZID # Make it named
   geneList.all <- geneList.all[order(geneList.all, decreasing = TRUE)] # Sort
   # Prepare separate up- and downregulated gene lists
   geneList.up        <- -log10(degs.all$PValue[degs.all$logFC > 0])
-  geneList.all[geneList.all == 0] <- .Machine$double.xmin # Avoid zero p-values
   names(geneList.up) <- degs.all$ENTREZID[degs.all$logFC > 0]
   geneList.up        <- geneList.up[order(geneList.up, decreasing = TRUE)]
   geneList.dn        <- -log10(degs.all$PValue[degs.all$logFC < 0])
